<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/back" />
  
          <TextView
              android:id="@+id/title"
              android:layout_gravity="center"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:textColor="#FFFFFF"
              android:text="@string/nosong"
              android:textAppearance="?android:attr/textAppearanceLarge" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content" >

              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:orientation="vertical" >

                  <TextView
                      android:id="@+id/current"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="00:00"
                      android:textColor="#FFFFFF" />

              </LinearLayout>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:gravity="right"
                  android:orientation="vertical" >

                  <TextView
                      android:id="@+id/total"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                                    android:layout_gravity="right"
                      android:text="00:00"
                      android:textColor="#3366FF" />

              </LinearLayout>

          </LinearLayout>

          <SeekBar
              android:id="@+id/seekBar"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" 
                            android:layout_marginTop="10dp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
              android:gravity="center_horizontal|center_vertical" >

              <ImageButton
                  android:id="@+id/buttonPrevious"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:contentDescription="@string/previous"
                  android:src="@android:drawable/ic_media_previous" />

              <ImageButton
                  android:id="@+id/buttonPlay"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:contentDescription="@string/play"
                  android:src="@android:drawable/ic_media_play" />

              <ImageButton
                  android:id="@+id/buttonNext"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:contentDescription="@string/next"
                  android:src="@android:drawable/ic_media_next" />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content" 
                                android:gravity="center">

              <ImageButton
                  android:id="@+id/buttonPause"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:contentDescription="@string/pause"
                  android:gravity="center"
                  android:src="@drawable/listicon" />

              <ImageButton
                  android:id="@+id/buttonlink"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:contentDescription="@string/pause"
                  android:src="@drawable/link"/>

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:gravity="center" >

              <TextView
                  android:id="@+id/connection"
                  android:layout_width="wrap_content"
                  android:textColor="#FFFFFF"
                  android:layout_height="wrap_content"
                  android:text="Not Connected" />

          </LinearLayout>

    </LinearLayout>

</RelativeLayout>
